chore:organised project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 gloo-storage = "0.3.0"                                                 # Add this line
+gloo-timers = "0.3.0"
+serde = { version = "1.0", features = ["derive"] }
+js-sys = "0.3"
 
 [package.metadata]
 base-url = "/idle"
