feat:add autosave

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ gloo-storage = "0.3.0"                                                 # Add thi
 gloo-timers = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 js-sys = "0.3"
+log = "0.4"
+wasm-logger = "0.2"
 
 [package.metadata]
 base-url = "/idle"
