--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,16 @@ web-sys = { version = "0.3", features = [
     "Document",
     "Element",
     "Window",
+    "FileReader",
+    "Blob",
+    "Url", 
+    "HtmlElement",
+    "HtmlInputElement",
+    "Event",
+    "ProgressEvent"
 ] }
 gloo-utils = "0.2"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["FileReader", "Blob", "Url", "HtmlElement", "HtmlInputElement", "Event", "ProgressEvent"] }
-wasm-logger = "0.2"
-wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["FileReader", "Blob", "Url", "HtmlElement", "HtmlInputElement", "Event", "ProgressEvent"] }
 
 [package.metadata]
 base-url = "/idle"
